--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ button.menu-object:hover:not(:active){
 	height: 85px;
 }
 body{
-	background-color :#F5470F;
+	background: -prefix-linear-gradient(top, blue, white);
 	display: grid; 
 	grid-gap : 1 em;
 	min-height: 60vh;
