--- a/main.css
+++ b/main.css
@@ -10,18 +10,87 @@ input[type=number]{
 	font-size: 26px;
 	line-height: 75px;
 	color : white;
+    font-family:'Bauhaus 93';
+    font-style: initial;
+    
 }
+.menu-word{
+    font-size: 25px;
+	line-height: 75px;
+    font-style: italic;
+    font-family:'Bauhaus 93';
+	color :black;
+    margin-left: 20px;
+    margin-top: 60px;
+    
+}
+.menu-word1{
+    font-size: 25px;
+	line-height: 75px;
+    font-style: italic;
+    font-family:'Bauhaus 93';
+	color : white;
+    margin-left: -5px;
+    margin-top: -20px;
+}
+.menu-word2{
+    font-size: 25px;
+	line-height: 75px;
+    font-style: italic;
+    font-family:'Bauhaus 93';
+	color : white;
+    margin-left: -5px;
+    margin-top: 40px;
+}
+
 
 .menu-object{
-	display:block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 300px;
-	height: 75px;
+    position: relative;
+    float: left;
+    width: 35%;
+    height: 60%;
 	font-size: 16px;
-	margin-top: 10px;
 }
-
+.menu-object button:nth-of-type(1) {
+    top : 0%;
+    left: 10%;
+    width: 100%;
+    height: 100%;
+    background-image : url(images/9.png);
+    background-position: center;
+    background-size: cover;
+}
+.menu-object button:nth-of-type(2) {
+    top : -100%;
+    left: 150%;
+    width: 100%;
+    height :100%;
+    background-image : url(images/boton_2.png);
+    background-position: center;
+    background-size: cover;
+}
+.menu-object button:nth-of-type(3) {
+    top : -80%;
+    left: 10%;
+    width: 100%;
+    height :100%;
+    background-image : url(images/b3.png);
+    background-position: center;
+    background-size: cover;
+}
+.menu-object button:nth-of-type(4) {
+    top : -180%;
+    left: 150%;
+    width: 100%;
+    height :100%;
+}
+.menu-object button:nth-of-type(5) {
+    top : -160%;
+    left:  80%;
+    width: 100%;
+    height :90%;
+    
+}
 p{
 	text-align: center;
 	font-size: 20 px;
@@ -30,20 +99,25 @@ p{
 
 button.menu-object:active{
 	font-size: 18px;
-	width: 275px;
-	height: 70px;
+	width: 200%;
+	height: 200%;
+    margin-right: 0px;
+    margin-left: 5px;
 	
 }
 
 button.menu-object:hover:not(:active){
 	font-size: 22px;
-	width: 325px;
-	height: 85px;
+	width: 120%;
+	height: 120%;
+    margin-top: auto;
+    margin-bottom: auto;
+    
 }
 body{
-	background: -prefix-linear-gradient(top, blue, white);
+	background: linear-gradient(to bottom, #663366, #ffffff);
 	display: grid; 
-	grid-gap : 1 em;
+	grid-gap : 10 em;
 	min-height: 60vh;
 	
 }
@@ -57,4 +131,10 @@ button.menu-object:active{
 	font-size: 18px;
 	width: 275px;
 	height: 70px;
+}
+
+input[type=image]{
+	margin-left: -20px;
+    margin-top: -5px;
+    margin-bottom: -60px;
 }
