--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ input[type=number]{
     font-family:'Bauhaus 93';
 	color :black;
     margin-left: 20px;
-    margin-top: 60px;
+    margin-top: 10px;
     
 }
 .menu-word1{
@@ -33,15 +33,6 @@ input[type=number]{
     margin-left: -5px;
     margin-top: -20px;
 }
-.menu-word2{
-    font-size: 25px;
-	line-height: 75px;
-    font-style: italic;
-    font-family:'Bauhaus 93';
-	color : white;
-    margin-left: -5px;
-    margin-top: 40px;
-}
 
 
 .menu-object{
@@ -52,40 +43,43 @@ input[type=number]{
 	font-size: 16px;
 }
 .menu-object button:nth-of-type(1) {
-    top : 0%;
+    top : -40%;
     left: 10%;
     width: 100%;
-    height: 100%;
+    height: 300%;
     background-image : url(images/9.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(2) {
-    top : -100%;
+    top : -350%;
     left: 150%;
     width: 100%;
-    height :100%;
+    height:300%;
     background-image : url(images/boton_2.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(3) {
-    top : -80%;
+    top : -170%;
     left: 10%;
     width: 100%;
-    height :100%;
+    height:300%;
     background-image : url(images/b3.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(4) {
-    top : -180%;
+    top : -470%;
     left: 150%;
     width: 100%;
-    height :100%;
+    height :300%;
+    background-image : url(images/OPCIONES.png);
+    background-position: center;
+    background-size: cover;
 }
 .menu-object button:nth-of-type(5) {
-    top : -160%;
+    top : -280%;
     left:  80%;
     width: 100%;
     height :90%;
@@ -99,17 +93,17 @@ p{
 
 button.menu-object:active{
 	font-size: 18px;
-	width: 200%;
-	height: 200%;
+	width: 90%;
+	height: 300%;
     margin-right: 0px;
-    margin-left: 5px;
+    margin-left: 0px;
 	
 }
 
 button.menu-object:hover:not(:active){
 	font-size: 22px;
-	width: 120%;
-	height: 120%;
+	width: 110%;
+	height: 230%;
     margin-top: auto;
     margin-bottom: auto;
     
