--- a/main.css
+++ b/main.css
@@ -79,10 +79,13 @@ input[type=number]{
     background-size: cover;
 }
 .menu-object button:nth-of-type(5) {
-    top : -280%;
+    top : -360%;
     left:  80%;
     width: 100%;
     height :90%;
+    background-image : url(images/sortir.png);
+    background-position: center;
+    background-size: cover;
     
 }
 p{
