--- a/main.css
+++ b/main.css
@@ -7,8 +7,9 @@ input[type=number]{
 }
 
 #title{
-	font-size: 26px;
+	font-size: 50px;
 	line-height: 75px;
+    margin-left: -90px;
 	color : white;
     font-family:'Bauhaus 93';
     font-style: initial;
@@ -95,8 +96,8 @@ p{
 
 button.menu-object:active{
 	font-size: 18px;
-	width: 90%;
-	height: 300%;
+	width: 100%;
+	height: 400%;
     margin-right: 0px;
     margin-left: 0px;
 	
@@ -104,8 +105,8 @@ button.menu-object:active{
 
 button.menu-object:hover:not(:active){
 	font-size: 22px;
-	width: 110%;
-	height: 230%;
+	width: 120%;
+	height: 340%;
     margin-top: auto;
     margin-bottom: auto;
     
