--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ input[type=number]{
     font-style: initial;
     
 }
+
 .menu-word{
     font-size: 25px;
 	line-height: 75px;
@@ -88,6 +89,39 @@ input[type=number]{
     background-position: center;
     background-size: cover;
 }
+.menu-boton{
+    position: relative;
+    float: left;
+    width: 35%;
+    height: 60%;
+	font-size: 16px;
+}
+.menu-boton button:nth-of-type(1) {
+    top :  140%;
+    left: -140%;
+    width: 100%;
+    height: 100%;
+   
+}
+.menu-boton button:nth-of-type(2) {
+    top : 40%;
+    left: -30%;
+    width: 100%;
+    height:100%;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
 p{
 	text-align: center;
 	font-size: 20 px;
