--- a/styles/pausa_style.css
+++ b/styles/pausa_style.css
@@ -3,18 +3,21 @@ body{
 }
 #title{
 	font-family: Impact, 'Arial Narrow Bold', sans-serif;
-     font-size: 50px;
-     text-align: center;
+     font-size: 100px;
+	 color:aliceblue;
+	 white-space: nowrap;
+	 text-align: center;
 }
 
 .menu-object{
 	display:block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 300px;
-	height: 200px;
+	width: 250px;
+	height: 100px;
 	font-size: 16px;
-	margin-top: 10px;
+	margin-top: 50px;
+	
 }
 
 button.menu-object:active{
