--- a/main.css
+++ b/main.css
@@ -6,11 +6,16 @@ input[type=number]{
     text-align: center;
 }
 
+.title{
+    position: relative;
+    top : -400%;
+    
+}
 #title{
 	font-size: 50px;
 	line-height: 75px;
     margin-left: -90px;
-	color : white;
+	color : black;
     font-family:'Bauhaus 93';
     font-style: initial;
     
@@ -45,46 +50,46 @@ input[type=number]{
 	font-size: 16px;
 }
 .menu-object button:nth-of-type(1) {
-    top : -40%;
-    left: 10%;
-    width: 100%;
+    top : -4300%;
+    left: 150%;
+    width: 50%;
     height: 300%;
     background-image : url(images/9.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(2) {
-    top : -350%;
-    left: 150%;
-    width: 100%;
+    top : -4300%;
+    left: 180%;
+    width: 50%;
     height:300%;
     background-image : url(images/boton_2.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(3) {
-    top : -170%;
-    left: 10%;
-    width: 100%;
+    top : -3900%;
+    left: 150%;
+    width: 50%;
     height:300%;
     background-image : url(images/b3.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(4) {
-    top : -470%;
-    left: 150%;
-    width: 100%;
+    top : -3900%;
+    left: 180%;
+    width: 50%;
     height :300%;
     background-image : url(images/OPCIONES.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(5) {
-    top : -360%;
-    left:  80%;
-    width: 100%;
-    height :90%;
+    top : -3500%;
+    left:  190%;
+    width: 50%;
+    height :300%;
     background-image : url(images/sortir.png);
     background-position: center;
     background-size: cover;
@@ -130,17 +135,17 @@ p{
 
 button.menu-object:active{
 	font-size: 18px;
-	width: 100%;
-	height: 400%;
+	width: 50%;
+	height: 200%;
     margin-right: 0px;
     margin-left: 0px;
 	
 }
 
 button.menu-object:hover:not(:active){
-	font-size: 22px;
-	width: 120%;
-	height: 340%;
+	font-size: 20px;
+	width: 50%;
+	height: 500%;
     margin-top: auto;
     margin-bottom: auto;
     
