--- a/main.css
+++ b/main.css
@@ -5,6 +5,12 @@ input[type=number]{
     width: 3rem;
     text-align: center;
 }
+input[type=image]{
+	margin-left: -20px;
+    margin-top: -5px;
+    margin-bottom: -60px;
+}
+
 
 .title{
     position: relative;
@@ -43,89 +49,40 @@ input[type=number]{
 
 
 .menu-object{
-    position: relative;
-    float: left;
-    width: 35%;
-    height: 60%;
+    display:block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 300px;
+	height: 100px;
 	font-size: 16px;
+	margin-top: 10px;
+    margin-bottom: 0px;
 }
 .menu-object button:nth-of-type(1) {
-    top : -5000%;
-    left: 180%;
-    width: 50%;
-    height: 300%;
     background-image : url(images/9.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(2) {
-    top : -4300%;
-    left: 130%;
-    width: 50%;
-    height:300%;
     background-image : url(images/boton_2.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(3) {
-    top : -3900%;
-    left: 180%;
-    width: 50%;
-    height:300%;
     background-image : url(images/b3.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(4) {
-    top : -3200%;
-    left: 130%;
-    width: 50%;
-    height :300%;
     background-image : url(images/OPCIONES.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(5) {
-    top : -2700%;
-    left:  190%;
-    width: 50%;
-    height :300%;
     background-image : url(images/sortir.png);
     background-position: center;
     background-size: cover;
 }
-.menu-boton{
-    position: relative;
-    float: left;
-    width: 35%;
-    height: 60%;
-	font-size: 16px;
-}
-.menu-boton button:nth-of-type(1) {
-    top :  140%;
-    left: -140%;
-    width: 100%;
-    height: 100%;
-   
-}
-.menu-boton button:nth-of-type(2) {
-    top : 40%;
-    left: -30%;
-    width: 100%;
-    height:100%;
-
-}
-
-
-
-
-
-
-
-
-
-
-
 
 p{
 	text-align: center;
@@ -135,23 +92,24 @@ p{
 
 button.menu-object:active{
 	font-size: 18px;
-	width: 50%;
-	height: 350%;
+	width: 275px;
+	height: 70px;
     	
 	
 }
 
 button.menu-object:hover:not(:active){
-	font-size: 20px;
-	width: 50%;
-	height: 400%;
+	font-size: 22px;
+	width: 325px;
+	height: 105px;
   
 }
 body{
 	background: linear-gradient(to bottom, #663366, #ffffff);
 	display: grid; 
-	grid-gap : 10 em;
+	grid-gap : 1 em;
 	min-height: 60vh;
+	height: 100vh;
 	
 }
 canvas {
@@ -159,8 +117,9 @@ canvas {
     margin: auto;
 }
 
-input[type=image]{
-	margin-left: -20px;
-    margin-top: -5px;
-    margin-bottom: -60px;
+button.menu-object:active{
+	font-size: 18px;
+	width: 275px;
+	height: 70px;
 }
+
