--- a/main.css
+++ b/main.css
@@ -47,6 +47,11 @@ input[type=image]{
     margin-top: -20px;
 }
 
+.logo{
+    margin-left: 350px;
+    margin-top: -150px;
+    margin-bottom: 5px;
+}
 
 .menu-object{
     display:block;
@@ -55,9 +60,9 @@ input[type=image]{
 	width: 300px;
 	height: 100px;
 	font-size: 16px;
-	margin-top: 5px;
-    margin-bottom: 10px;
-    margin-left: 250px;
+	margin-top: -40px;
+    margin-bottom: 50px;
+    margin-left: 400px;
 }
 .menu-object button:nth-of-type(1) {
     background-image : url(images/9.png);
