--- a/main.css
+++ b/main.css
@@ -5,12 +5,23 @@ input[type=number]{
     width: 3rem;
     text-align: center;
 }
+input[type=image]{
+	margin-left: -20px;
+    margin-top: -5px;
+    margin-bottom: -60px;
+}
 
+
+.title{
+    position: relative;
+    top : -400%;
+    
+}
 #title{
 	font-size: 50px;
 	line-height: 75px;
     margin-left: -90px;
-	color : white;
+	color : black;
     font-family:'Bauhaus 93';
     font-style: initial;
     
@@ -36,91 +47,48 @@ input[type=number]{
     margin-top: -20px;
 }
 
+.logo{
+    margin-left: 350px;
+    margin-top: -150px;
+    margin-bottom: 5px;
+}
 
 .menu-object{
-    position: relative;
-    float: left;
-    width: 35%;
-    height: 60%;
+    display:block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 300px;
+	height: 100px;
 	font-size: 16px;
+	margin-top: -40px;
+    margin-bottom: 50px;
+    margin-left: 400px;
 }
 .menu-object button:nth-of-type(1) {
-    top : -40%;
-    left: 10%;
-    width: 100%;
-    height: 300%;
     background-image : url(images/9.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(2) {
-    top : -350%;
-    left: 150%;
-    width: 100%;
-    height:300%;
     background-image : url(images/boton_2.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(3) {
-    top : -170%;
-    left: 10%;
-    width: 100%;
-    height:300%;
     background-image : url(images/b3.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(4) {
-    top : -470%;
-    left: 150%;
-    width: 100%;
-    height :300%;
     background-image : url(images/OPCIONES.png);
     background-position: center;
     background-size: cover;
 }
 .menu-object button:nth-of-type(5) {
-    top : -360%;
-    left:  80%;
-    width: 100%;
-    height :90%;
     background-image : url(images/sortir.png);
     background-position: center;
     background-size: cover;
 }
-.menu-boton{
-    position: relative;
-    float: left;
-    width: 35%;
-    height: 60%;
-	font-size: 16px;
-}
-.menu-boton button:nth-of-type(1) {
-    top :  140%;
-    left: -140%;
-    width: 100%;
-    height: 100%;
-   
-}
-.menu-boton button:nth-of-type(2) {
-    top : 40%;
-    left: -30%;
-    width: 100%;
-    height:100%;
-
-}
-
-
-
-
-
-
-
-
-
-
-
 
 p{
 	text-align: center;
@@ -130,26 +98,24 @@ p{
 
 button.menu-object:active{
 	font-size: 18px;
-	width: 100%;
-	height: 400%;
-    margin-right: 0px;
-    margin-left: 0px;
+	width: 275px;
+	height: 70px;
+    	
 	
 }
 
 button.menu-object:hover:not(:active){
 	font-size: 22px;
-	width: 120%;
-	height: 340%;
-    margin-top: auto;
-    margin-bottom: auto;
-    
+	width: 325px;
+	height: 105px;
+  
 }
 body{
 	background: linear-gradient(to bottom, #663366, #ffffff);
 	display: grid; 
-	grid-gap : 10 em;
+	grid-gap : 1 em;
 	min-height: 60vh;
+	height: 100vh;
 	
 }
 canvas {
@@ -157,15 +123,9 @@ canvas {
     margin: auto;
 }
 
-
 button.menu-object:active{
 	font-size: 18px;
 	width: 275px;
 	height: 70px;
 }
 
-input[type=image]{
-	margin-left: -20px;
-    margin-top: -5px;
-    margin-bottom: -60px;
-}
