--- a/main2.css
+++ b/main2.css
@@ -17,6 +17,17 @@
     margin-top: 10px;
     
 }
+.menu-object{
+    display:block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 300px;
+	height: 100px;
+	font-size: 16px;
+	margin-top: -40px;
+    margin-bottom: 50px;
+    margin-left: 400px;
+}
 .menu-boton{
     width: 50%;
     height: 100%;
